Bug 315157 - Can't untick an item in updater list
Summary: Can't untick an item in updater list
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: Updates (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Jonathan Thomas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-14 19:37 UTC by Dave Gilbert
Modified: 2016-03-02 13:25 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dave Gilbert 2013-02-14 19:37:46 UTC
I see a set of software updates that appear, if I click on the tick to deselect it (since I'm debugging something) it stays selected.

Reproducible: Always

Steps to Reproduce:
1. Get software updates to open
2. Click on the tick of a particular package

Actual Results:  
The version information for the package is displayed in the bottom pane; but the tick stays selected

Expected Results:  
The tick should be deselected.
Comment 1 Philip Muškovac 2013-02-14 19:39:53 UTC
Confirmed with 1.9.80 in raring.
Comment 2 Jonathan Thomas 2013-03-05 16:43:54 UTC
Git commit 3b8cb21ddae3f5c408402e371c05b585ed61eb4e by Jonathan Thomas.
Committed on 05/03/2013 at 17:41.
Pushed by jmthomas into branch '2.0'.

Temporary 2.0-branch-only hack to get the checkboxes working again. A separate solution will need to be made for 2.1+, since a lot of the updater internals changed.
FIXED-IN:2.0.0

M  +11   -3    updater/UpdateModel/UpdateItem.cpp
M  +3    -1    updater/UpdateModel/UpdateItem.h
M  +19   -0    updater/UpdateModel/UpdateModel.cpp
M  +5    -0    updater/UpdateModel/UpdateModel.h
M  +5    -0    updater/UpdaterWidget.cpp
M  +0    -3    updater/muon-updaterui.rc

http://commits.kde.org/muon/3b8cb21ddae3f5c408402e371c05b585ed61eb4e
Comment 3 Martin Gradwell 2013-07-03 10:44:12 UTC
Nice to see it's fixed in 2.0. However, I'm trying out a preview version of Saucy. I hope the fix for Saucy doesn't get overlooked because the bug is already marked as resolved and fixed.

What happens for me is similar but with a slight twist. When I try to untick an item the containing window does a little dance. That's the only way I can describe it. Everything in the updater window moves very rapidly up and down several times. The ticked box remains ticked.