Temporary 2.0-branch-only hack to get the checkboxes working again. A separate solution will need to be made for 2.1+, since a lot of the updater internals changed.

BUG:315157
FIXED-IN:2.0.0