updater/UpdateModel/UpdateItem.cpp
@@ -31,6 +31,7 @@ UpdateItem::UpdateItem()
     : m_app(0)
     , m_parent(0)
     , m_type(ItemType::RootItem)
+    , m_checkState(Qt::Unchecked)
 {
 }
 
@@ -39,6 +40,7 @@ UpdateItem::UpdateItem(const QString &categoryName,
     : m_app(0)
     , m_parent(0)
     , m_type(ItemType::CategoryItem)
+    , m_checkState(Qt::Unchecked)
     , m_categoryName(categoryName)
     , m_categoryIcon(categoryIcon)
 {
@@ -48,6 +50,7 @@ UpdateItem::UpdateItem(AbstractResource *app, UpdateItem *parent)
     : m_app(app)
     , m_parent(parent)
     , m_type(ItemType::ApplicationItem)
+    , m_checkState(Qt::Unchecked)
 {
 }
 
@@ -191,7 +194,7 @@ Qt::CheckState UpdateItem::checked() const
         int uncheckedCount = 0;
 
         foreach (UpdateItem *child, m_children) {
-            (child->app()->state() & AbstractResource::Upgradeable) ?
+            (child->checked() == Qt::Checked) ?
                         checkedCount++ : uncheckedCount++;
         }
 
@@ -208,8 +211,7 @@ Qt::CheckState UpdateItem::checked() const
         break;
     }
     case ItemType::ApplicationItem:
-        (app()->state() & AbstractResource::Upgradeable) ?
-                    checkState = Qt::Checked : checkState = Qt::Unchecked;
+        return m_checkState;
         break;
     case ItemType::RootItem:
     case ItemType::InvalidItem:
@@ -217,6 +219,12 @@ Qt::CheckState UpdateItem::checked() const
     }
 
     return checkState;
+}
+
+void UpdateItem::setChecked(bool checked)
+{
+    if (type() == ItemType::ApplicationItem || type() == ItemType::CategoryItem)
+        m_checkState = (checked) ? Qt::Checked : Qt::Unchecked;
 }
 
 UpdateItem::ItemType UpdateItem::type() const
