updater/UpdateModel/UpdateItem.h
@@ -58,6 +58,7 @@ public:
     UpdateItem *child(int row) const;
     int childCount() const;
     int row() const;
+    void setChecked(bool checked);
     void sort();
 
     AbstractResource *app() const;
@@ -67,13 +68,14 @@ public:
     qint64 size() const;
     Qt::CheckState checked() const;
     ItemType type() const;
+    QApt::Package* retrievePackage() const;
 
 private:
-    QApt::Package* retrievePackage() const;
     AbstractResource *m_app;
 
     UpdateItem *m_parent;
     ItemType m_type;
+    Qt::CheckState m_checkState;
     QList<UpdateItem *> m_children;
     QString m_categoryName;
     KIcon m_categoryIcon;
